fix(front): reduce padding left of ul and ol on mobile

--- a/frontend_lib/src/component/TinyEditor/TinyEditor.styl
+++ b/frontend_lib/src/component/TinyEditor/TinyEditor.styl
@@ -27,3 +27,10 @@ div.tox.tox-tinymce
 
   & .tox-label, & .tox-toolbar-label
     font-size standardFontSize !important
+
+@media (max-width: max-sm)
+  ul, ol
+    padding-inline-start 20px
+@media (max-width: max-xs)
+  ul, ol
+    padding-inline-start 10px
